--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,32 +1,47 @@
-name: Next.js CI Learning
+name: Next.js CI/CD
 
 on:
   push:
     branches: [main]
-  pull_request:
 
 jobs:
   ci:
     runs-on: ubuntu-latest
-
     steps:
-      # 1. Get your code
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # 2. Install Node.js
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: "npm"
 
-      # 3. Install dependencies
       - name: Install dependencies
-        run: npm install
+        run: npm ci
 
-      # 4. Build app
       - name: Build app
         env:
           RESEND_API_KEY: ${{ secrets.RESEND_API_KEY }}
         run: npm run build
+
+  deploy:
+    needs: ci
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy to VPS via SSH
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.VPS_HOST }}
+          username: ${{ secrets.VPS_USER }}
+          key: ${{ secrets.VPS_SSH_KEY }}
+          port: ${{ secrets.VPS_PORT || 22 }}
+          script: |
+            set -e
+            cd ~/projects/1cd-landing-nextJs
+            git pull origin main
+            npm ci
+            export RESEND_API_KEY="${{ secrets.RESEND_API_KEY }}"
+            npm run build
+            pm2 restart nextjs-app || pm2 start npm --name "nextjs-app" -- start
+            pm2 save
